--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ code {
 .app {
   background-color: rgb(103, 103, 103);
 }
+
+/* .sidebar-list li a:hover {
+  color: red;
+}
+
+.link {
+  color:blue;
+} */
